--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
   <title>Busultan Trading</title>
 
   <style>
+    /* Powered By Footer */
+.powered-footer {
+    position: fixed;
+    bottom: 12px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 12px;
+    font-weight: 600;
+    opacity: 0.55;
+    background: linear-gradient(90deg, #00eaff, #b37bff);
+    -webkit-background-clip: text;
+    color: transparent;
+    letter-spacing: 1px;
+    pointer-events: none;
+    user-select: none;
+    z-index: 9999;
+}
+
     :root {
       --bg-main: #050914;
       --bg-card: rgba(15, 20, 40, 0.92);
